{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 63,
  "lineage": "26b88df4-3f50-45e1-e913-a2f4163e9b9d",
  "resources": [
    {
      "module": "module.network[\"mq-projection-service\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589535382240:vpc/vpc-00236743a35f19163",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0acb8a72023b1974b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bd2b8ba771f5bc39",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00236743a35f19163",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0339466fcda2bb42e",
            "owner_id": "589535382240",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network[\"mq-projection-service\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589535382240:security-group/sg-0cbf26c5693746002",
            "description": "Allow inbound traffic on 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbf26c5693746002",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mq-projection-service-ecs-sg",
            "name_prefix": "",
            "owner_id": "589535382240",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mq-projection-service-ecs-sg"
            },
            "tags_all": {
              "Name": "mq-projection-service-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00236743a35f19163"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"purchase-service\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589535382240:vpc/vpc-00236743a35f19163",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0acb8a72023b1974b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bd2b8ba771f5bc39",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00236743a35f19163",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0339466fcda2bb42e",
            "owner_id": "589535382240",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network[\"purchase-service\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589535382240:security-group/sg-05efd430ead4cd4f3",
            "description": "Allow inbound traffic on 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05efd430ead4cd4f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "purchase-service-ecs-sg",
            "name_prefix": "",
            "owner_id": "589535382240",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "purchase-service-ecs-sg"
            },
            "tags_all": {
              "Name": "purchase-service-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00236743a35f19163"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"query-service\"]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589535382240:vpc/vpc-00236743a35f19163",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0acb8a72023b1974b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bd2b8ba771f5bc39",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00236743a35f19163",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0339466fcda2bb42e",
            "owner_id": "589535382240",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network[\"query-service\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:589535382240:security-group/sg-04a6fe0e84c464caa",
            "description": "Allow inbound traffic on 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a6fe0e84c464caa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "query-service-ecs-sg",
            "name_prefix": "",
            "owner_id": "589535382240",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "query-service-ecs-sg"
            },
            "tags_all": {
              "Name": "query-service-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00236743a35f19163"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}